--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "coingecko-api": "^1.0.10",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,5 +18,9 @@
   "devDependencies": {
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0"
+  },
+
+  "engines": {
+    "node": "12.x"
   }
 }
